plugins {
    id "org.beryx.jlink" version "2.24.1"
    id 'java'
}

apply plugin: 'application'

group 'org.jdump'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}


compileJava {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    testRuntimeOnly project(':agent')
}

compileJava {
    options.compilerArgs.addAll([
            "--add-exports", "jdk.attach/sun.tools.attach=jdump"
    ])
}

application {
    mainClass.set('jdump.JDump')
    mainModule = 'jdump'
    applicationDefaultJvmArgs = [
            "--add-exports", "jdk.attach/sun.tools.attach=jdump"
    ]
}

jar {
    from('agent/build/libs/') {
        include '**.jar'
    }
    manifest {
        attributes(
                "Main-Class": application.mainClass.get(),
                "Implementation-Version": archiveVersion
        )
    }
}

jlink {
    launcher {
        name = 'jdump'
    }
}

compileTestJava {
    options.compilerArgs.addAll([ "--add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED" ])
}

test {
    jvmArgs = [ "--add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED" ]
    useJUnitPlatform()
}